--- a/assets/css/magnific-popup.css
+++ b/assets/css/magnific-popup.css
@@ -1,4 +1,3 @@
-/* Magnific Popup CSS */
 .mfp-bg {
   top: 0;
   left: 0;
@@ -96,7 +95,7 @@
   .mfp-preloader a {
     color: #CCC; }
     .mfp-preloader a:hover {
-      color: $white; }
+      color: #fff; }
 
 .mfp-s-ready .mfp-preloader {
   display: none; }
@@ -133,7 +132,7 @@ button::-moz-focus-inner {
   text-align: center;
   opacity: 0.65;
   padding: 0 0 18px 10px;
-  color: $white;
+  color: #fff;
   font-style: normal;
   font-size: 28px;
   font-family: Arial, Baskerville, monospace; }
@@ -148,7 +147,7 @@ button::-moz-focus-inner {
 
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
-  color: $white;
+  color: #fff;
   right: -6px;
   text-align: right;
   padding-right: 6px;
@@ -202,7 +201,7 @@ button::-moz-focus-inner {
 .mfp-arrow-left {
   left: 0; }
   .mfp-arrow-left:after {
-    border-right: 17px solid $white;
+    border-right: 17px solid #fff;
     margin-left: 31px; }
   .mfp-arrow-left:before {
     margin-left: 25px;
@@ -211,7 +210,7 @@ button::-moz-focus-inner {
 .mfp-arrow-right {
   right: 0; }
   .mfp-arrow-right:after {
-    border-left: 17px solid $white;
+    border-left: 17px solid #fff;
     margin-left: 39px; }
   .mfp-arrow-right:before {
     border-left: 27px solid #fff; }
